# ChangeLog for sys-devel/binutils
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-devel/binutils/ChangeLog,v 1.369 2009/09/14 15:34:55 armin76 Exp $

  14 Sep 2009; Raúl Porcel <armin76@gentoo.org> binutils-2.19.1-r1.ebuild:
  s390 stable

  09 Sep 2009; Mike Frysinger <vapier@gentoo.org> binutils-2.19.1-r1.ebuild:
  Fix gold build with gcc-4.4 #269260.

*binutils-2.20.51.0.1 (09 Sep 2009)

  09 Sep 2009; Mike Frysinger <vapier@gentoo.org>
  +binutils-2.20.51.0.1.ebuild:
  Version bump.

*binutils-2.19.51.0.14 (23 Jul 2009)

  23 Jul 2009; Mark Loeser <halcy0n@gentoo.org>
  -binutils-2.19.51.0.12.ebuild, +binutils-2.19.51.0.14.ebuild:
  Version bump, remove old

*binutils-2.19.51.0.13 (22 Jul 2009)

  22 Jul 2009; Mark Loeser <halcy0n@gentoo.org>
  -binutils-2.19.51.0.10.ebuild, -binutils-2.19.51.0.11.ebuild,
  +binutils-2.19.51.0.13.ebuild:
  Version bump

*binutils-2.19.51.0.12 (20 Jul 2009)

  20 Jul 2009; Mike Frysinger <vapier@gentoo.org>
  +binutils-2.19.51.0.12.ebuild:
  Version bump.

*binutils-2.19.51.0.11 (12 Jul 2009)

  12 Jul 2009; Mark Loeser <halcy0n@gentoo.org>
  +binutils-2.19.51.0.11.ebuild:
  Version bump; bug #276498

*binutils-2.19.51.0.10 (19 Jun 2009)

  19 Jun 2009; Mike Frysinger <vapier@gentoo.org>
  +binutils-2.19.51.0.10.ebuild:
  Version bump.

*binutils-2.19.51.0.9 (07 Jun 2009)

  07 Jun 2009; Mike Frysinger <vapier@gentoo.org>
  +binutils-2.19.51.0.9.ebuild:
  Version bump.

*binutils-2.19.51.0.8 (03 Jun 2009)

  03 Jun 2009; Mike Frysinger <vapier@gentoo.org>
  +binutils-2.19.51.0.8.ebuild:
  Version bump.

*binutils-2.19.51.0.7 (01 Jun 2009)

  01 Jun 2009; Mike Frysinger <vapier@gentoo.org>
  +binutils-2.19.51.0.7.ebuild:
  Version bump.

*binutils-2.19.51.0.6 (30 May 2009)

  30 May 2009; Mike Frysinger <vapier@gentoo.org>
  +binutils-2.19.51.0.6.ebuild:
  Version bump.

  26 May 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  binutils-2.19.51.0.5.ebuild: