@@ -26,9 +26,12 @@ DIST binutils-2.19.51.0.14-patches-1.0.tar.bz2 7603 RMD160 0d8dfc9f44ae8c991408d
 DIST binutils-2.19.51.0.14.tar.bz2 15899859 RMD160 977b3497f1607f01f94feca4f867bd8627013fb9 SHA1 1c224a1987669880e42b00d91f5fbee9e0876302 SHA256 28d543cccfffde94e28a4d4863dbd0ba13c51d67060b52c4152049c517124093
 DIST binutils-2.20.51.0.1-patches-1.0.tar.bz2 7623 RMD160 8701477d3f650640ad4c1e6b688d96d5587fff88 SHA1 e47bc607295a0c4869d365513a4133b0a2a5b7ff SHA256 a471a7cdefcdfc87d52d18d044afa6cb3a8da0f03fac2bb0148c35648ecd09c6
 DIST binutils-2.20.51.0.1.tar.bz2 16043729 RMD160 05bd928b34a20bd1d64377e82518c49a1f7718e5 SHA1 6b2f4165d249f5f92731867ce986e8be574807cf SHA256 03e4104eab12df485fcf3880e57b30d1215c15882bd753dab822711a0289d193
+DIST binutils-2.20.51.0.2-patches-1.0.tar.bz2 7588 RMD160 6b22b052d8b0c7a06c1ac29d9c2fe18c62eb7be9 SHA1 bfd8002a19989174fb684298abe48129eb0b3bbe SHA256 067a934150a4119e659293d76203fa9d82d17d2db106759c6664a6422a48745e
+DIST binutils-2.20.51.0.2.tar.bz2 16291811 RMD160 fd65a60fb0df360f20d0897ba62cb87f57ae6666 SHA1 b9318d75250be2cfc0fbafbd0ed68aa45bd69005 SHA256 49a961cc925df5a5f5e1cbe52befd8bc2875cfa205e0b9ea6caaa63504fd1b33
 EBUILD binutils-2.18-r4.ebuild 2153 RMD160 f6d35b1e5668566de8bab18128a28163ccdcdb89 SHA1 c640e2778f7a0b3508fcf6131850e56ed052c087 SHA256 b2be0da458b8cf2681a58c9bcf80481d49e483dd1842ce5c30d8bd5d7a76a022
 EBUILD binutils-2.19.1-r01.1.ebuild 1201 RMD160 4228bd8a9b2213ebc9cfdd07039382259222a82e SHA1 d22579ac2f4cb9cbbe7d6b0a3cb4caa8617f8ca9 SHA256 f0dd1d7cd48b0706e5be40c23212e92162c58d0764386664c9e5e112ee412d03
 EBUILD binutils-2.19.51.0.14.ebuild 808 RMD160 170aa2b2eb7f4d690daf57f68f385cbc938baba5 SHA1 0d08682e3ad4df14da108fb0ece7e5900f80b0f0 SHA256 0d9946ed60c3659f19a65f8f318fbb1d8ad48a3854f98e56bd5345a0f32ec130
 EBUILD binutils-2.20.51.0.1.ebuild 858 RMD160 50ec1ce84207e73dcf1688a3a237b1428c2d75db SHA1 d533a2a1546deae02d3694f7a8c02ea1f407a8ad SHA256 b555368bd9bacb78bbdb132e9b92948e14f270e9ca08685b72f40af609df5c17
-MISC ChangeLog 63989 RMD160 7084b40f6cac19a68d6aa72fdb955d471bfbc28c SHA1 e96c29e373dd71c8085646499092980c390dd17f SHA256 c69fed0352c2b2aea6adb7eec6b9798476d23f846b4b256f6c8766b3de7d15a2
+EBUILD binutils-2.20.51.0.2.ebuild 865 RMD160 fa57cddbe89de38b9b1185fa66d0d4c36aec05fa SHA1 b13359ff1c1b0f14c4edc1f3f090d4ec15aded3f SHA256 47d446bdb75e9904e39627b203b595643b0ccc0d9b434e7576fe0663c09402f1
+MISC ChangeLog 64124 RMD160 3186a3e7f21ae3a31defb0a7a70841e64652d482 SHA1 8df3a5f3a964862f8c958d3072a0affe70f911ee SHA256 feb4f696cdc44aa486a05dc9cbdf32162870d2ada6b1cfe0f58844c3bfe26344
 MISC metadata.xml 511 RMD160 84535ecd31e21020a41f3d173a294f03c5951da0 SHA1 1a40f6d427a9e3b64a15967b9b442d8cd65d40bb SHA256 ceac2610b009f7a25946ad186496cb7d761a495820ed6b67be9b560dda223c39
