@@ -1,6 +1,12 @@
 # ChangeLog for sys-devel/binutils
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/binutils/ChangeLog,v 1.369 2009/09/14 15:34:55 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/binutils/ChangeLog,v 1.370 2009/10/10 21:19:25 vapier Exp $
+
+*binutils-2.20.51.0.2 (10 Oct 2009)
+
+  10 Oct 2009; Mike Frysinger <vapier@gentoo.org>
+  +binutils-2.20.51.0.2.ebuild:
+  Version bump.
 
   14 Sep 2009; Raúl Porcel <armin76@gentoo.org> binutils-2.19.1-r1.ebuild:
   s390 stable
